	  and others). 
	- Minor UserTag compatibility updates (from_state)
	- Minor documentation updates.
	- Auto-update function added.
	- Additional UPS Online/Offline tests: Canada, Mexico.
	- Copyright update.
	- Aesthetic updates to most modules.
	- Documentation updates for several modules.
	- More tests for Offline::UPS.

1.02  Jan 06 2004
	- Update all data tables from UPS (Jan 05 2004)
	- Update fuel surcharge
	- Installation documentation updates.
	- Rename the update functions.
	- Sample "auto update" script that will update the data files.

1.01  Jan 02 2004
	- Offline UPS support for International Express, ExpressPlus, and Expedited.
	- Offline UPS support for Hawaii and Alaska.
	- Tests for International and Hawaii/Alaska.
	- Utilize Devel::Required to automatically generate required modules list.
	- Patch Devel::Required so it can be customized.
	- Documentation Updates.
	- Some data format changes (east coast/west coast data update, add 'letter'
	  to 1da chart, rename several of the files).

1.00  Dec 21 2003
	- Major updates: many new features prompt the jump into 1.0 land. 
	- New Offline::UPS module: provides table-based rate requests, which are
	  fast, local lookups that do not rely on the Internet.
	- Config module added: provides ini-style configuration options for easy 
	  customizability.
	- Data module added: provides database access and related functions.
	- Util module added: provides simple file and misc. utililties.
	- New "support files" directories (configuration, data, etc.).
	- New MakeMaker magic handles installation of the support file directories.
	- Documentation updates (new INSTALL file, updated API usage info, etc.) 
	- Update some syntax to 5.6 style.
	- Fix bugs that used to require the user to import many unnecessary modules.
	  Reported by Richard Hornsby <rhornsby@io.osuedc.org>.
	- Mark Stosberg <mark@stosberg.com> contributed documentation patches:
	  - rate_request()
	  - Corrected Registration URL